# G4Utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/g4utils/HDF5/: VoxFile3D.py  VoxFile4D.py  __init__.py  shared.py  vox_file_3d.py  vox_file_4d.py  vox_file_base.py  vti_export.py
src/g4utils/Vox/: __init__.py  voxgeometry.py
