[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g4utils"
version = "0.1.0"
description = "A Python utility library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "R. Tonneau", email = "romain.tonneau@unamur.be" },
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
  "h5py>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "h5py-stubs>=0.1.2",
]

[project.urls]
Homepage = "https://github.com/rtonneau/G4Utils"
Issues = "https://github.com/rtonneau/G4Utils/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/g4utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=g4utils --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["h5py", "h5py.*"]
ignore_missing_imports = true
